--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,119 +1,26 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-executors:
-  mask_node:
-    docker:
-      - image: circleci/node:15.3.0
-    working_directory: ~/repo
-commands:
-  restore_workspace:
-    description: 'Restore the workspace'
-    steps:
-      - attach_workspace:
-          at: ~/
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  install_dependencies:
-    executor: mask_node
-    environment:
-      WEB3_CONSTANTS_RPC: ${WEB3_CONSTANTS_RPC}
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - restore_cache:
-          name: Restore PNPM Package Cache
-          keys:
-            - v3-mask-cache-pnpm
       - run:
-          name: Install PNPM
-          command: sudo npm install -g pnpm@6.4.0
-      - run:
-          name: Install Dependencies
-          command: pnpm install --frozen-lockfile --store-dir ~/.pnpm/
-      - save_cache:
-          name: Save NPM Package Cache
-          key: v3-mask-cache-npm
-          paths:
-            - ~/.pnpm/
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - repo
-  build:
-    executor: mask_node
-    steps:
-      - restore_workspace
-      - run:
-          name: Install PNPM
-          command: sudo npm install -g pnpm@6.4.0
-      - run:
-          name: Build Mask Network
-          command: npx gulp build-ci
-      - store_artifacts:
-          path: MaskNetwork.base.zip
-          destination: /MaskNetwork.base.zip
-      - store_artifacts:
-          path: MaskNetwork.iOS.zip
-          destination: /MaskNetwork.iOS.zip
-      - store_artifacts:
-          path: MaskNetwork.chromium.zip
-          destination: /MaskNetwork.chromium.zip
-      - store_artifacts:
-          path: MaskNetwork.firefox.zip
-          destination: /MaskNetwork.firefox.zip
-      - store_artifacts:
-          path: MaskNetwork.gecko.zip
-          destination: /MaskNetwork.gecko.zip
-      - store_artifacts:
-          path: MaskNetwork.chromium-beta.zip
-          destination: /MaskNetwork.chromium-beta.zip
-      - persist_to_workspace:
-          root: ~/repo/
-          paths:
-            - MaskNetwork.base.zip
-            - MaskNetwork.iOS.zip
-            - MaskNetwork.chromium.zip
-            - MaskNetwork.chromium-beta.zip
-            - MaskNetwork.firefox.zip
-            - MaskNetwork.gecko.zip
-  publish-github-release:
-    docker:
-      - image: cibuilds/github:0.10
-    steps:
-      - restore_workspace
-      - run:
-          name: 'Publish Release on GitHub'
-          command: |
-            set -o nounset
-            mkdir ~/repo/release
-            mv ~/*.zip ~/repo/release/
-            cd ~/repo/release
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -b "✔ No breaking changes. / ⚠ Has breaking changes!
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-            🆕 New Feature
-
-            🔐 Security
-
-            🎨 UI Improvements
-
-            🐛 Bug Fixes
-
-            👩‍💻 Miscellaneous" -replace -draft $(git describe HEAD) ~/repo/release
-          # -b BODY \         # Set text describing the contents of the release
-          # -delete \         # Delete release and its git tag in advance if it exists (same as -recreate)
-          # -n TITLE \        # Set release title
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  main:
+  say-hello-workflow:
     jobs:
-      - install_dependencies
-      - build:
-          requires:
-            - install_dependencies
-      - publish-github-release:
-          requires:
-            - build
-          filters:
-            branches:
-              only: released
+      - say-hello
